<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtUsenamet"
        android:hint="@string/tentaikhoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtPasswordt"
        android:hint="@string/matkhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtnhaclai"
        android:hint="@string/nhaclaimatkhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtsodienthoai"
        android:hint="@string/sodienthoai"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edthovaten"
        android:hint="@string/hovaten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            app:cardCornerRadius="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:elevation="3dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnluutk"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
                android:text="@string/xacnhan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            app:cardCornerRadius="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:elevation="3dp"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnthoat"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
                android:text="@string/huy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.v7.widget.CardView>


    </LinearLayout>





</LinearLayout>