<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="id" />

    <EditText
        android:imeOptions="actionNext"
        android:id="@+id/edtUsenamet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tentaikhoan" />

    <EditText
        android:imeOptions="actionNext"
        android:id="@+id/edtPasswordt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/matkhau" />

    <EditText
        android:imeOptions="actionNext"
        android:id="@+id/edtnhaclai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nhaclaimatkhau" />

    <EditText
        android:imeOptions="actionNext"
        android:id="@+id/edtsodienthoai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sodienthoai"
        android:inputType="number" />

    <EditText
        android:imeOptions="actionNext"
        android:id="@+id/edthovaten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hovaten" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            app:cardCornerRadius="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:elevation="3dp">

            <Button
                android:id="@+id/btnluutk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/xacnhan"
                android:textAllCaps="false" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            app:cardCornerRadius="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:elevation="3dp">

            <Button
                android:id="@+id/btnthoat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/huy"
                android:textAllCaps="false" />

        </android.support.v7.widget.CardView>


    </LinearLayout>


</LinearLayout>