<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_centerInParent="true"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/Themtheloai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtma"
            android:hint="@string/matheloai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtten"
            android:hint="@string/tentheloai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtvitri"
            android:inputType="number"
            android:hint="@string/vitritheloai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtmota"
            android:hint="@string/mota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                app:cardCornerRadius="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnluu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/xacnhan"
                    android:textAllCaps="false" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                app:cardCornerRadius="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnthoat"
                    android:textAllCaps="false"
                    android:background="@color/colorPrimary"
                    android:text="@string/huy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.v7.widget.CardView>


        </LinearLayout>


    </LinearLayout>



</LinearLayout>