<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_centerInParent="true"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/tongquan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


    <android.support.v7.widget.CardView
        app:cardCornerRadius="5dp"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:text="@string/tongsosachban"
                android:textSize="20dp"
                android:textColor="@color/colorud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/colorPrimary"
                android:text="0"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="7dp"
        app:cardCornerRadius="5dp"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="20dp"
                android:text="@string/tongtien"
                android:textSize="20dp"
                android:textColor="@color/colorud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="18dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/tien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="7dp"
        app:cardCornerRadius="5dp"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="20dp"
                android:text="@string/tienchi"
                android:textSize="20dp"
                android:textColor="@color/colorud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="18dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/tien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_marginTop="7dp"
        app:cardCornerRadius="5dp"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginLeft="20dp"
                android:text="@string/tienchi"
                android:textSize="20dp"
                android:textColor="@color/colorud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="14dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorchu"
                android:text="@string/dulieu"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </android.support.v7.widget.CardView>






</LinearLayout>