<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_centerInParent="true"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/themsach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/xoatrang"
            android:layout_margin="10dp"
            android:src="@drawable/lai"
            android:layout_width="30dp"
            android:layout_height="30dp" />

    </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="5dp"
            android:elevation="5dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginLeft="20dp"
                        android:textSize="18dp"
                        android:textColor="@color/colorud"
                        android:text="@string/masach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/edtmasach"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                   <ImageView
                       android:layout_marginLeft="20dp"
                        android:src="@drawable/tensach"
                       android:layout_width="48dp"
                       android:layout_height="52dp" />

                    <EditText
                        android:id="@+id/edttensach"
                        android:hint="@string/tensach"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/tacgia"
                        android:layout_width="48dp"
                        android:layout_height="52dp" />

                    <EditText
                        android:id="@+id/edttacgia"
                        android:hint="@string/tacgia"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/gia"
                        android:layout_width="48dp"
                        android:layout_height="52dp" />

                    <EditText
                        android:id="@+id/edtgiasach"
                        android:hint="@string/giaban"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/so"
                        android:layout_width="48dp"
                        android:layout_height="52dp" />

                    <EditText
                        android:id="@+id/edtsoluong"
                        android:hint="@string/soluong"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            app:cardCornerRadius="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnluu"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
                android:text="@string/xacnhan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            app:cardCornerRadius="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnhienthi"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
                android:text="@string/hienthi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.v7.widget.CardView>


    </LinearLayout>

    <EditText
        android:id="@+id/edtthongbao"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




</LinearLayout>